// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> ref should work 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Box props correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  margin-top: 20px;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box poodle-select c0"
  id="id"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    aria-label="name"
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Select correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Select with adornment correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  border-color: #AF1308;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c0:focus-within {
  border-color: #AF1308;
}

.c0:hover {
  border-color: #AF1308;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
}

.c2 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c3 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c3:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1px;
  height: 1rem;
  background-color: #CCCCCC;
  margin-right: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-right: 8px;
  font-size: 1.5rem;
  color: #AF1308;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    class="poodle-box poodle-input-adornment c1"
  >
    $
  </div>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c2"
  />
  <select
    aria-invalid="true"
    class="poodle-box poodle-select__select c3"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c4"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
  <div
    class="poodle-box poodle-select__divider c5"
  />
  <div
    class="poodle-box poodle-input-adornment c6"
  >
    end
  </div>
</div>
`;

exports[`<Select /> should render Select with error correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  border-color: #AF1308;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c0:focus-within {
  border-color: #AF1308;
}

.c0:hover {
  border-color: #AF1308;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    aria-invalid="true"
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> should render Select with value text 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  >
    Animals
  </div>
  <select
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should extend styles in global 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
  margin-top: 13px;
  letter-spacing: 251px;
  top: 2px;
  text-indent: 3px;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  margin-top: 13px;
  letter-spacing: 251px;
  top: 2px;
  text-indent: 3px;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
  margin-top: 11px;
  letter-spacing: 251px;
  top: 1px;
  text-indent: 2px;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should extend styles in local 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
  margin-top: 13px;
  letter-spacing: 251px;
  top: 2px;
  text-indent: 3px;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  margin-top: 13px;
  letter-spacing: 251px;
  top: 2px;
  text-indent: 3px;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
  margin-top: 11px;
  letter-spacing: 251px;
  top: 1px;
  text-indent: 2px;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should override styles 1`] = `
.c0 {
  margin-top: 51px;
}

.c1 {
  margin-top: 54px;
}

.c3 {
  margin-top: 53px;
}

<div
  class="poodle-box poodle-select c0"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    class="poodle-box poodle-select__select c1"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Select /> theming should render with default props correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  border-color: #CCCCCC;
  background-color: #fff;
  -webkit-transition: 125ms border-color ease-in;
  transition: 125ms border-color ease-in;
}

.c0:focus-within {
  border-color: #00478A;
}

.c0:hover {
  border-color: #00478A;
}

.c1 {
  position: relative;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  box-sizing: content-box;
  background: transparent;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  min-height: 1.25em;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border: none;
  outline: none;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  pointer-events: none;
}

<div
  class="poodle-box poodle-select hello c0"
  id="id"
>
  <div
    aria-hidden="true"
    class="poodle-box poodle-select__value-text c1"
  />
  <select
    class="poodle-box poodle-select__select c2"
  >
    <option
      value="tiger"
    >
      Tiger
    </option>
    <option
      value="lion"
    >
      Lion
    </option>
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <div
    class="poodle-box poodle-select__icon c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="m12 16 6.928-6H5.072L12 16z"
      />
    </svg>
  </div>
</div>
`;
